--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -1,3 +1,4 @@
+/* RESET CSS_____________________ */
 html,
 body,
 div,
@@ -86,7 +87,6 @@ video {
   font: inherit;
   vertical-align: baseline;
 }
-/* HTML5 display-role reset for older browsers */
 article,
 aside,
 details,
